--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "html-to-pdf-js": "^0.9.3",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
