--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^5.12.2",
     "axios": "^1.6.2",
     "html-to-pdf-js": "^0.9.3",
     "html2canvas": "^1.4.1",
@@ -18,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.20.1"
   },
   "devDependencies": {
