--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-file-reader": "^1.1.4",
     "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.4.1",
+    "react-pdf": "^7.6.0",
     "react-router-dom": "^6.20.1"
   },
   "devDependencies": {
